# insights-core-messaging

./: .flake8  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Dockerfile  README.md  app.py  driver.py  pyproject.toml  renovate.json  setup.py  tox.ini
.github/workflows/: bandit.yaml  bots-auto-merge.yaml  linters.yaml  pypi-release.yaml  pytests.yaml  ruff.yaml  tests.yaml  unit_tests.yaml
examples/: config.yaml
insights_messaging/: __main__.py  appbuilder.py  builder.py  engine.py  template.py  watcher.py
insights_messaging/consumers/: __init__.py  cli.py  kafka.py  rabbitmq.py  sqs.py
insights_messaging/downloaders/: httpfs.py  localfs.py  null.py  s3.py
insights_messaging/formats/: rhel_stats.py
insights_messaging/publishers/: __init__.py  cli.py  rabbitmq.py
insights_messaging/requeuers/: __init__.py  kafka.py  rabbitmq.py
insights_messaging/services/: __init__.py  cli.py  kafka.py
insights_messaging/tests/: conftest.py  test_consumer_base.py  test_consumer_watchers.py  test_defaulting_template.py  test_downloaders.py  test_get_logging_config.py  test_kafka_consumer.py  test_kafka_metrics.py  test_memory_leak.py  test_pluggable_engine.py  test_publishers.py  test_resolve_variables.py  test_watcher.py  test_watchers.py
insights_messaging/utils/: retry.py
insights_messaging/watchers/: __init__.py  stats.py
