[build-system]
requires = ["setuptools>=70", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "insights-core-messaging"
dynamic = ["version"]
readme = "README.md"
maintainers = [
    {name="CCX Processing Team", email="ccx-core-processing-team@redhat.com"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

requires-python = ">= 3.11"
dependencies = [
    "confluent-kafka",
    "insights-core",
    "logstash_formatter",
    "pika",
    "prometheus_client",
    "pyyaml",
    "requests",
    "s3fs",
]

license = "Apache-2.0"

[tool.setuptools.packages.find]
include = ["insights_messaging*"]

[project.urls]
Homepage = "https://github.com/RedHatInsights/insights-core-messaging"

[project.optional-dependencies]
develop = [
    "ipython",
    "pytest",
    "setuptools",
    "twine",
    "wheel",
]

test = [
    "coverage",
    "pytest",
    "pytest-cov",
]

linting = [
    "ruff",
]

kafka = [
    "confluent-kafka",
]

rabbitmq = [
    "pika",
]

[tool.setuptools_scm]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["UP", "F632", "E", "W", "F", "I", "N", "B", "C4", "SIM"]
